Sat May 10 13:58:35 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.rc : 3.2.13
	  - Support function-like macro replacement with variable arguments.

Sat May 10 12:44:20 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cpp/macro.rb : Support function-like macro replacement
	  with variable arguments.
	* lib/adlint/cpp/eval.rb : Ditto.

	* features/code_check/W0835.feature : Add scenario to check that the
	  function-like macro with __VA_ARGS__ can be replaced correctly.
	* MANIFEST : Ditto.

Sat Apr 12 09:08:17 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.ga : 3.2.12
	  - Fix the type and object model in order to correctly manage unnamed
	    struct or union members.
	  - Add examination package initializer.
	  - Revise behavior of the CMA code structure collection so that an
	    optional examination package can output its own special
	    met-records.

Thu Apr 10 18:48:43 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.rc : 3.2.11
	  - Fix the type and object model in order to correctly manage unnamed
	    struct or union members.
	  - Add examination package initializer.
	  - Revise behavior of the CMA code structure collection so that an
	    optional examination package can output its own special
	    met-records.

Thu Apr 10 15:11:38 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/metric.rb : Revise behavior of the CMA code structure
	  collection so that an optional examination package can output its own
	  special met-records.
	* lib/adlint/ld/object.rb : Ditto.
	* lib/adlint/ld/typedef.rb : Ditto.

Thu Apr 10 13:34:44 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/exam.rb : Add examination package initializer.

Thu Apr 10 10:57:34 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/type.rb : Fix the type and object model in order to
	  correctly manage unnamed struct or union members.
	* lib/adlint/cc1/syntax.rb : Ditto.